# h5features

./: .clang-format  .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE.txt  MANIFEST  MANIFEST.in  README.rst  TODO.rst  __init__.py  build.sh  convert2h5features  exemple.py  h5features.py  h5features2.py  makefile  meta.yaml  npz2h5features.py  npz2h5features2.py  performances.sh  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  togitlab.yml
cpp/: CMakeLists.txt
cpp/include/h5features/: features.h  writer.h
cpp/include/h5features/details/: v2_reader.h  v2_writer.h
cpp/src/: item.cpp  reader.cpp  times.cpp  v2_reader.cpp
cpp/test/data/: data.1.0.h5f
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  api_cpp.rst  api_python.rst  conf.py  conf.py.in  example.py  h5features.rst  index.rst  installation.rst  overview.rst
docs/: Makefile  conf.py  doc.txt  exemple.py  h5features.rst  h5features2.rst  index.rst  installation.rst  license.rst  make.bat  overview.rst  readthedocs-pip-requirements.txt  whatsnew.rst
docs-legacy/: Makefile  conf.py
docs/legacy/: h5features2.rst  index.rst
docs/source/: build.rst  conf.py  h5features.dataset.rst  h5features.rst  h5features2.dataset.rst  h5features2.rst  index.rst  modules.rst  whatsnew.rst
h5features/: __init__.py  convert2h5features.py  converter.py  data.py  dataentry.py  dataset.py  entry.py  features.py  h5features.py  index.py  items.py  labels.py  npz2h5features.py  properties.py  reader.py  times.py  utils.py  version.py  writer.py
h5features/dataset/: __init__.py  dataset.py  features.py  items.py  times.py
h5features2/: Features.py  Items.py  __init__.py  chunk.py  converter.py  features.py  h5features2.py  index.py  item.py  items.py  npz2h5features2.py  read.py  reader.py  times.py  utils.py  versions.py  write.py  writer.py
h5features2/dataset/: __init__.py  dataset.py  features.py  items.py  times.py
include/: h5features.h  h5features.h.in  read_group.h
include/h5features/: exception.h  features.h  hdf5.h  item.h  properties.h  reader.h  times.h  version.h  writer.h
include/h5features/details/: properties_reader.h  properties_writer.h  reader_interface.h  v1_reader.h  v1_writer.h  v2_reader.h  v2_writer.h  writer_interface.h
python/: CMakeLists.txt  py_h5features.cpp  py_item.cpp  py_properties.cpp  py_times.cpp  pytest.ini  setup.py
python/h5features/: __init__.py  get_groups.py  item.py  reader.py  versions.py  writer.py
python/include/: item.h  item_wrapper.h  properties_wrapper.h
python/src/: item.cpp  item_wrapper.cpp  py_h5features.cpp  py_item.cpp  py_properties.cpp  py_read_group.cpp  py_reader.cpp  py_version.cpp  py_writer.cpp  reader.cpp  writer.cpp
python/test/: conftest.py  test_item.py  test_performances.py  test_reader.py  test_readwrite.py  test_wrapper_features.py  test_wrapper_item.py  test_wrapper_properties.py  test_wrapper_readwrite.py  test_wrapper_times.py
python_wrapper/: CMakeLists.txt  py_features.cpp  py_h5features.cpp  py_item.cpp  py_properties.cpp  py_reader.cpp  py_times.cpp  py_writer.cpp
python_wrapper/include/: item.h  pbitem.h  pbreader.h  pbwriter.h  reader.h  writer.h
python_wrapper/src/: item.cpp  pbitem.cpp  pbreader.cpp  pbwriter.cpp  reader.cpp  writer.cpp
setup/: setup.txt
src/: basic.cpp  exception.cpp  features.cpp  item.cpp  properties.cpp  properties_reader.cpp  properties_writer.cpp  read_group.cpp  reader.cpp  reader_interface.cpp  times.cpp  v1_reader.cpp  v1_writer.cpp  v2_reader.cpp  v2_writer.cpp  version.cpp  writer.cpp  writer_interface.cpp
test/: CMakeLists.txt  generate.py  h5features_v1_0.py  main.py  perfs.py  play.py  profile.py  test.py  test_aux_methods.py  test_auxiliary_methods.py  test_chunk.py  test_compatibility.py  test_converter.py  test_data.py  test_features.py  test_h5features.py  test_h5features2.py  test_index.py  test_items.py  test_labels.py  test_properties.py  test_reader.py  test_times.py  test_toplevel.py  test_writer.py  utils.py
test/aux/: generate.py  h5features_v1_0.py  utils.py
test/data/: data.1.1.h5f  data.2.0.h5f
test/python/pyh5f_test/: properties_test.py  pyfeatures_test.py  pyitem_test.py  pyproperties_test.py  pyreadwrite_test.py  pytimes_test.py
test/python/python_test/: item_test.py  performances_test.py  readwrite_test.py
test/src/: test_features.cpp  test_item.cpp  test_properties.cpp  test_reader.cpp  test_reader_files.cpp  test_times.cpp  test_writer.cpp
test/utils/include/: test_utils_capture.h  test_utils_data.h  test_utils_datadir.h  test_utils_ostream.h  test_utils_ostream.hpp  test_utils_tmpdir.h
test/utils/src/: benchmark.cpp  test_utils_capture.cpp  test_utils_data.cpp  test_utils_datadir.cpp.in  test_utils_tmpdir.cpp
